--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-soundmanager2": "^0.5.6",
     "angular-bootstrap": "^2.4.0",
     "bootstrap-fileinput": "^4.3.6",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "angular-cookies": "^1.6.1"
   }
 }
