--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap-fileinput": "^4.3.6",
     "font-awesome": "^4.7.0",
     "angular-ui-sortable": "^0.16.1",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "angular-youtube-mb": "^1.3.1"
   }
 }
